examples/test/testpolicy15977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15977
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key34: value6
      key43: value8
      key38: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value2
          key8: value3
          key44: value45
      podSelector:
        matchLabels:
          key45: value8
